# BitCup

./: .gitignore  Architecture.md  Cargo.toml  Plan.md  deny.toml
.github/workflows/: security.yml
bitcup-api/: Cargo.toml
bitcup-api/src/: lib.rs
bitcup-cli/: Cargo.toml
bitcup-cli/src/: main.rs
bitcup-core/: Cargo.toml
bitcup-core/src/: lib.rs
bitcup-store/: Cargo.toml
bitcup-store/src/: lib.rs
bitcup-ui/: package.json  pnpm-lock.yaml
bitcup-ui-api/: Cargo.toml
bitcup-ui-api/src/: lib.rs
bitcup-ui/src/: index.html  main.js  styles.css
bitcup-ui/src-tauri/: Cargo.toml  tauri.conf.json
docs/specs/: tauri-capability-review-v1.txt  tauri-qa-checklist-v1.txt
