[workspace]
members = [
  "bitcup-core",
  "bitcup-store",
  "bitcup-api",
  "bitcup-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL"
authors = ["BitCup Team"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
blake3 = "1"
rkyv = "0.8"
bytecheck = "0.8"
