[workspace]
members = [
  "bitcup-core",
  "bitcup-store",
  "bitcup-api",
  "bitcup-cli",
  "bitcup-ui-api",
]
exclude = ["bitcup-ui/src-tauri"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
authors = ["BitCup Team"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
blake3 = "1"
rkyv = "0.8"
bytecheck = "0.8"
redb = "2"
ignore = "0.4"
fd-lock = "4"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
secrecy = "0.10"
zeroize = "1"
age = "0.11"
proptest = "1"
serde = { version = "1", features = ["derive"] }
bitcup-core = { version = "0.1.0", path = "bitcup-core" }
bitcup-store = { version = "0.1.0", path = "bitcup-store" }
bitcup-api = { version = "0.1.0", path = "bitcup-api" }
bitcup-ui-api = { version = "0.1.0", path = "bitcup-ui-api" }
