[package]
name = "bitcup-core"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = { workspace = true }
rkyv = { workspace = true, features = ["bytecheck"] }
bytecheck = { workspace = true }
ignore = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }
