[package]
name = "bitcup-ui-api"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
bitcup-api = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bitcup-core = { workspace = true }
bitcup-store = { workspace = true }
tempfile = "3"
